# discogs2rb

./: .env.example  .gitignore  README.md  output.csv  pyproject.toml
src/discogs2rb/: __main__.py  config.py
src/discogs2rb/actions/: ResolveDiscogsTracks.py
src/discogs2rb/discogs/: data_types.py  discogs_client.py
src/discogs2rb/rekordbox/: data_types.py
src/discogs2rb/rekordbox/resolvers/: track.py
src/discogs2rb/utils/: helpers.py  logger.py
